--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,8 +1,8 @@
 <body>
   <div class="center-container">
     <div class="inside-center-container">
-      <p id="welcome-text">WELCOME!</p>
-      <a id="login-button" href="/login">Login</a>
+      <h2>WELCOME!</h2>
+      <a class="login-button" href="/login">Login</a>
       <a class="register-button" href="/register">Register</a>
     </div>
   </div>
