--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,3 +1,17 @@
 <body>
-  <div>LOGIN</div>
+  <div class="center-container">
+    <div class="inside-center-container">
+      <h2>Login</h2>
+      <form method="POST" id="login">
+        <p>Username: </p>
+        <input type="text" name="username" placeholder="Username...">
+        <p>Password: </p>
+        <input type="password" name="password" placeholder="Password...">
+        <div id="login-container">
+          <a href="/" class="login-button">Login</a>
+          <a href="/register" class="register-button">Register</a>
+        </div>
+      </form>
+    </div>
+  </div>
 </body>
