--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -8,8 +8,8 @@
         <p>Password: </p>
         <input type="password" name="password" placeholder="Password...">
         <div id="login-container">
-          <a href="/" class="login-button">Login</a>
-          <a href="/register" class="register-button">Register</a>
+          <a href="/" class="login-button-prim" type="submit">Login</a>
+          <a href="/register" class="login-button-sec">Register</a>
         </div>
       </form>
     </div>
