--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,3 +1,17 @@
 <body>
-  <div>REGISTER</div>
+  <div class="center-container">
+    <div class="inside-center-container">
+      <h2>Register</h2>
+      <form method="POST" id="login">
+        <p>Username: </p>
+        <input type="text" name="username" placeholder="Username...">
+        <p>Password: </p>
+        <input type="password" name="password" placeholder="Password...">
+        <div id="login-container">
+          <a href="/" class="login-button-prim">Register</a>
+          Already have an account? <a href="/login" class="login-button-sec">Log in</a>
+        </div>
+      </form>
+    </div>
+  </div>
 </body>
