--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -8,7 +8,7 @@
         <p>Password: </p>
         <input type="password" name="password" placeholder="Password...">
         <div id="login-container">
-          <a href="/" class="login-button-prim" type="submit">Login</a>
+          <button class="login-button-prim" type="submit">Login</button>
           <a href="/register" class="login-button-sec">Register</a>
         </div>
       </form>
