--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -8,7 +8,7 @@
         <p>Password: </p>
         <input type="password" name="password" placeholder="Password...">
         <div id="login-container">
-          <a href="/" class="login-button-prim">Register</a>
+          <button class="login-button-prim" type="submit">Register</button>
           Already have an account? <a href="/login" class="login-button-sec">Log in</a>
         </div>
       </form>
