--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -153,7 +153,7 @@ input[type='password'] {
   text-decoration: none;
   color: white;
   font-size: 30px;
-  width: 100%;
+  width: 70%;
   text-align: center;
 
   /* https://www.w3schools.com/css/css3_gradients.asp */
@@ -173,6 +173,7 @@ input[type='password'] {
 .login-button-sec {
   color: rgb(185, 185, 185);
   text-decoration: underline;
+  margin-top: 10px;
 }
 
 #login {
@@ -199,12 +200,13 @@ input[type='password'] {
   align-items: center;
 }
 
-/* https://developer.mozilla.org/en-US/docs/Web/CSS/:last-of-type */
-#login input:last-of-type {
+#login button {
+  width: 100%;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 
-#login a.login-button-prim {
-  width: 100%;
-  margin-bottom: 10px;
+.error {
+  margin-bottom: 0;
+  color: red;
 }
