--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -108,9 +108,10 @@ input[type='password'] {
   align-items: center;
   justify-content: center;
   color: white;
+  padding-left: 10px;
+  padding-right: 10px;
   font-size: 25px;
   height: 100%;
-  width: 30%;
   background: none;
   text-decoration: none;
   border: none;
