--- a/src/views/account.hbs
+++ b/src/views/account.hbs
@@ -1,4 +1,29 @@
 <body>
+  <div id="header">
+    <div class="header-container">
+      <a href="/" id="home">
+        <img src="/img/logo.png" id="logo">FlightPath
+      </a>
+    </div>
+    <div class="header-container">
+      <form method="GET" id="search-container">
+        <input type="text" name="airport" placeholder="Search for an airport...">
+        <button type="submit"><i class="material-icons">search</i></button>
+      </form>
+    </div>
+    <div class="header-container">
+      {{#if user}}
+        <nav id="account">
+          <a href="/account">Hi {{user.username}}!</a>
+        </nav>
+      {{else}}
+        <nav id="account">
+          <a href="/login">Login</a>
+          <a href="/register">Register</a>
+        </nav>
+      {{/if}}
+    </div>
+  </div>
   <div>
     ACCOUNT
   </div>
