--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -103,7 +103,8 @@ input[type='password'] {
   height: 100%;
 }
 
-#account a {
+#account a,
+button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,7 +118,8 @@ input[type='password'] {
   border: none;
 }
 
-#account a:hover {
+#account a:hover,
+button:hover {
   background: rgb(0, 0, 98);
   cursor: grab;
 }
