Created layout for add flight page and account page

--- a/src/views/account.hbs
+++ b/src/views/account.hbs
@@ -1,5 +1,21 @@
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Testing leaflet</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+</head>
+
 <body>
-  <div style="color:white">
-    ACCOUNT PAGE NOT IMPLEMENTED
+  <div>
+    <div id="map"></div>
   </div>
+  <div id="account-container">
+    <div id="add-button-container">
+      <a href="/add" class="button-prim">Add</a>
+    </div>
+  </div>
+  <script src="/js/scripts.mjs"></script>
 </body>
