--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -2,7 +2,7 @@
   <div class="center-container">
     <div class="inside-center-container">
       <h2>WELCOME!</h2>
-      <a class="login-button-prim" href="/login">Login</a>
+      <a class="button-prim" href="/login">Login</a>
       <a class="login-button-sec" href="/register">Register</a>
     </div>
   </div>
