--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -3,15 +3,15 @@
     <div class="inside-center-container">
       <h2>Register</h2>
       <form method="POST" id="login">
-        <p>Username: </p>
+        <label>Username: </label>
         <input type="text" name="username" placeholder="Username...">
-        <p>Password: </p>
+        <label>Password: </label>
         <input type="password" name="password" placeholder="Password...">
         {{#if error}}
           <p class="error">{{error}}</p>
         {{/if}}
         <div id="login-container">
-          <button class="login-button-prim" type="submit">Register</button>
+          <button class="button-prim" type="submit">Register</button>
           Already have an account? <a href="/login" class="login-button-sec">Log in</a>
         </div>
       </form>
