--- a/src/views/account.hbs
+++ b/src/views/account.hbs
@@ -17,5 +17,5 @@
       <a href="/add" class="button-prim">Add</a>
     </div>
   </div>
-  <script src="/js/scripts.mjs"></script>
+  <script src="/js/scripts.mjs" type="module"></script>
 </body>
