--- a/src/views/account.hbs
+++ b/src/views/account.hbs
@@ -13,8 +13,18 @@
     <div id="map"></div>
   </div>
   <div id="account-container">
+    <table id="flights">
+      <tr>
+        <th>Flight</th>
+        <th>Origin</th>
+        <th>Destination</th>
+        <th>Date</th>
+        <th>Duration</th>
+        <th>A/C type</th>
+      </tr>
+    </table>
     <div id="add-button-container">
-      <a href="/add" class="button-prim">Add</a>
+      <a href="/add" class="button-prim">Add a flight</a>
     </div>
   </div>
   <script src="/js/scripts.mjs" type="module"></script>
