--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -13,9 +13,55 @@
           <label for="type">Aircraft type:</label>
           <select name="type">
             <option value="">--Please choose an option--</option>
-            <option value="A320">Airbus a320 (A320)</option>
-            <option value="B738">Boeing 737-800 (B738)</option>
-            <option value="B77W">Boeing 777-300ER (B77W) </option>
+            <optgroup label="Boeing">
+              <option value="B737">Boeing 737-700 (B737)</option>
+              <option value="B738">Boeing 737-800 (B738)</option>
+              <option value="B739">Boeing 737-900 (B739)</option>
+              <option value="B38M">Boeing 737 MAX 8 (B38M)</option>
+              <option value="B39M">Boeing 737 MAX 9 (B39M)</option>
+              <option value="B744">Boeing 747-400 (B744)</option>
+              <option value="B748">Boeing 747-800 (B748)</option>
+              <option value="B752">Boeing 757-200 (B752)</option>
+              <option value="B753">Boeing 757-300 (B753)</option>
+              <option value="B763">Boeing 767-300 (B763)</option>
+              <option value="B764">Boeing 767-400 (B764)</option>
+              <option value="B772">Boeing 777-200 (B772)</option>
+              <option value="B77L">Boeing 777-200LR (B77L)</option>
+              <option value="B77W">Boeing 777-300ER (B77W)</option>
+              <option value="B788">Boeing 787-8 Dreamliner (B788)</option>
+              <option value="B789">Boeing 787-9 Dreamliner (B789)</option>
+              <option value="B78X">Boeing 787-10 Dreamliner (B78X)</option>
+            </optgroup>
+            <optgroup label="Airbus">
+              <option value="BCS1">Airbus A220-100 (BCS1)</option>
+              <option value="BCS3">Airbus A220-300 (BCS3)</option>
+              <option value="A319">Airbus A319 (A319)</option>
+              <option value="A320">Airbus A320 (A320)</option>
+              <option value="A321">Airbus A321 (A321)</option>
+              <option value="A20N">Airbus A320neo (A20N)</option>
+              <option value="A21N">Airbus A321neo (A21N)</option>
+              <option value="A332">Airbus A330-200 (A332)</option>
+              <option value="A333">Airbus A330-300 (A333)</option>
+              <option value="A339">Airbus A330-900neo (A339)</option>
+              <option value="A343">Airbus A340-300 (A343)</option>
+              <option value="A346">Airbus A340-600 (A346)</option>
+              <option value="A359">Airbus A350-900 (A359)</option>
+              <option value="A35K">Airbus A350-1000 (A35K)</option>
+              <option value="A388">Airbus A380-800 (A388)</option>
+            </optgroup>
+            <optgroup label="Embraer">
+              <option value="E75L">Embraer E175 (E75L)</option>
+              <option value="E190">Embraer E190 (E190)</option>
+            </optgroup>
+            <optgroup label="Bombardier">
+              <option value="CRJ2">Canadair Regional Jet CRJ-200 (CRJ2)</option>
+              <option value="CRJ7">Canadair Regional Jet CRJ-700 (CRJ7)</option>
+              <option value="CRJ9">Canadair Regional Jet CRJ-900 (CRJ9)</option>
+            </optgroup>
+            <optgroup label="Other">
+              <option value="AT72">ATR-72 (AT72)</option>
+              <option value="DH8D">de Havilland Dash 8-400 (DH8D)</option>
+            </optgroup>
           </select>
         </div>
         <div>
