--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -19,7 +19,7 @@
       </a>
     </div>
     <div class="header-container">
-      <form method="GET" id="search-container">
+      <form method="GET" action="/airport" id="search-container">
         <input type="text" name="airport" placeholder="Search for an airport...">
         <button type="submit"><i class="material-icons">search</i></button>
       </form>
