--- a/src/views/account.hbs
+++ b/src/views/account.hbs
@@ -2,10 +2,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Testing leaflet</title>
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+  <script src=" https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="">
+    </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
 
 <body>
@@ -13,6 +18,18 @@
     <div id="map"></div>
   </div>
   <div id="account-container">
+    <div id="summary-container">
+      <div>
+        <canvas id="airline-chart"></canvas>
+      </div>
+      <div>
+        <canvas id="aircraft-chart"></canvas>
+      </div>
+      <div>
+        <h1>TOTAL TIME</h1>
+        <h1>{{flightTime}}</h1>
+      </div>
+    </div>
     <table id="flights">
       <tr>
         <th>Flight</th>
