--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -312,6 +312,15 @@ td {
   padding: 5px;
 }
 
+td i {
+  color: grey;
+}
+
+td i:hover {
+  cursor: grab;
+  color: red;
+}
+
 #flights tr:nth-child(odd) {
   background-color: rgb(181, 199, 207);
 }
