Finished airport weather page

--- a/src/views/account.hbs
+++ b/src/views/account.hbs
@@ -45,5 +45,5 @@
       <a href="/add" class="button-prim">Add a flight</a>
     </div>
   </div>
-  <script src="/js/scripts.mjs" type="module"></script>
+  <script src="/js/accountScripts.mjs" type="module"></script>
 </body>
