--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -20,7 +20,7 @@
     </div>
     <div class="header-container">
       <form method="GET" action="/airport" id="search-container">
-        <input type="text" name="airport" placeholder="Search for an airport...">
+        <input type="text" name="airport" placeholder="Search for an airport... (JFK/KJFK)">
         <button type="submit"><i class="material-icons">search</i></button>
       </form>
     </div>
