--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -72,6 +72,7 @@ button:hover {
   background-color: white;
   border-radius: 20px/50%;
   width: 350px;
+  height: 30px;
 }
 
 input:not([type='submit']) {
@@ -82,7 +83,9 @@ input:not([type='submit']) {
 }
 
 #search-container input {
+  margin-left: 7px;
   width: 330px;
+  height: 30px;
 }
 
 #search-container button {
@@ -212,7 +215,6 @@ p {
 }
 
 #account-container {
-  height: 1000px;
   width: 90%;
   margin: auto;
   background-color: rgb(228, 247, 255);
@@ -348,4 +350,54 @@ td i:hover {
   margin-top: 20px;
   margin-bottom: 20px;
   font-size: 65px;
+}
+
+#weather-container {
+  height: 80%;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+  background-color: rgb(196 243 252 / 80%);
+}
+
+#weather-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  font-size: 27px;
+}
+
+#weather-header span {
+  color: rgb(234, 234, 234);
+  position: relative;
+  left: 10px;
+  font-size: 50px;
+}
+
+#weather-header span:hover {
+  cursor: grab;
+}
+
+#weather-grid {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#weather-grid div {
+  display: flex;
+  align-items: center;
+  font-size: 35px;
+}
+
+#weather-grid span {
+  font-weight: bold;
 }
