--- a/src/views/airport.hbs
+++ b/src/views/airport.hbs
@@ -1,34 +1,39 @@
 <body>
   <div class="center-container">
     <div id="weather-container">
-      <div id="weather-header">
-        <h1>{{weather.name}}</h1>
-        <span class="material-icons">star</span>
-      </div>
-      <div id="weather-grid">
-        <div>
-          <span>Wind</span>: {{weather.wspd}}
-          {{#if weather.wgst}}
-            - {{weather.wgst}}
-          {{/if}}
-          miles per hour
+      {{#if err}}
+        <div id="weather-header">
+          <h1>Airport weather information not found</h1>
         </div>
-        <div>
-          <span>Temperature</span>: {{weather.tempC}}C / {{weather.tempF}}F
+      {{else}}
+        <div id="weather-header">
+          <h1>{{weather.name}}</h1>
         </div>
-        <div>
-          <span>Visibility</span>: {{weather.visib}} km
+        <div id="weather-grid">
+          <div>
+            <span>Wind</span>: {{weather.wspd}}
+            {{#if weather.wgst}}
+              - {{weather.wgst}}
+            {{/if}}
+            miles per hour
+          </div>
+          <div>
+            <span>Temperature</span>: {{weather.tempC}}C / {{weather.tempF}}F
+          </div>
+          <div>
+            <span>Visibility</span>: {{weather.visib}} km
+          </div>
+          <div>
+            <span>Pressure</span>: {{weather.altimHPA}} hPa / {{weather.altimINHG}} inHg
+          </div>
+          <div>
+            <span>Cloud cover</span>: {{weather.clouds}}
+          </div>
+          <div>
+            <span>Notes</span>: {{weather.notes}}
+          </div>
         </div>
-        <div>
-          <span>Pressure</span>: {{weather.altimHPA}} hPa / {{weather.altimINHG}} inHg
-        </div>
-        <div>
-          <span>Cloud cover</span>: {{weather.clouds}}
-        </div>
-        <div>
-          <span>Notes</span>: {{weather.notes}}
-        </div>
-      </div>
+      {{/if}}
     </div>
   </div>
 </body>
