Fixed some bugs

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -233,6 +233,10 @@ p {
   border-bottom-width: 5px;
 }
 
+#map a {
+  font-size: 16px;
+}
+
 #add-button-container {
   margin: 30px;
   width: 700px;
